--- a/Test02/Views/KeToan/ChinhsuaHD.cshtml
+++ b/Test02/Views/KeToan/ChinhsuaHD.cshtml
@@ -20,82 +20,106 @@
                 @Html.AntiForgeryToken()
 
                 <div class="form-horizontal">
-                    <div class="form-horizontal">
+                    <div class="row" style="padding:20px;">
+                        @{ var mahd = db.HoaDons.Where(s => s.MaDH == Model.MaDH).FirstOrDefault();
+                        }
+                        <div class="col-sm-4">
+                            <p><strong>Mã đơn hàng:</strong> @Html.DisplayFor(model => model.MaDH)</p>
+                        </div>
+                        <div class="col-sm-4">
+                            <p><strong>Mã đại lý:</strong> @Html.DisplayFor(model => model.MaDL)</p>
+                        </div>
+                        <div class="col-sm-4">
 
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        @Html.HiddenFor(model => model.MaDH)
-                        @Html.HiddenFor(model => model.MaDL)
-                        @Html.HiddenFor(model => model.MaNVLap)
+                        </div>
+                        <div class="col-sm-4">
+                            <p>
+                                <strong>Tên đại lý:</strong> @{ var madh = db.DaiLies.Where(s => s.MaDL == Model.MaDL).FirstOrDefault();
+                                }
+                                @Html.DisplayFor(model => madh.TenDL)
+                            </p>
+                        </div>
+                        <div class="col-sm-4">
+                            <p>
+                                <strong>Loại đại lý:</strong>
+                                @Html.DisplayFor(model => madh.MaLoaiDL)
+                            </p>
+                        </div>
+                        <div class="col-sm-4">
 
-                        @Html.HiddenFor(model => model.TrangThai)
-                        @Html.HiddenFor(model => model.DiemGiao)
-                        @Html.HiddenFor(model => model.TongTien)
+                            <p><strong>Địa diểm giao:</strong>@Html.DisplayFor(model => model.DiemGiao)</p>
 
-                      
-                        <p>
-                            <strong>Mã hóa đơn:</strong>@{ var mahd = db.HoaDons.Where(s => s.MaDH == Model.MaDH).FirstOrDefault();
-                            }
-                            @Html.DisplayFor(model => mahd.MaHD);
-                        </p>
-                        <p><strong>Mã đơn hàng:</strong> @Html.DisplayFor(model => model.MaDH)</p>
-                        <p><strong>Mã đại lý:</strong> @Html.DisplayFor(model => model.MaDL)</p>
-                        <p>
-                            <strong>Tên đại lý:</strong> @{ var madh = db.DaiLies.Where(s => s.MaDL == Model.MaDL).FirstOrDefault();
-                            }
-                            @Html.DisplayFor(model => madh.TenDL)
-                        </p>
-                        <p><strong>Địa diểm giao:</strong>@Html.DisplayFor(model => model.DiemGiao)</p>
-                        <p><strong>Trạng thái đơn hàng:</strong>@Html.DisplayFor(model => model.TrangThai)</p>
+                        </div>
+                        <div class="col-sm-4">
 
-                        <p>
-                            <strong>Tổng đơn hàng:</strong> @{ var ThanhTien = string.Format("{0:0,0 vnđ}", Model.TongTien);}
-                            @Html.DisplayFor(modelItem => ThanhTien)
-                        </p>
-                        <p>
-                            <strong>Tình trạng thanh toán:</strong>
-                            <div class="form-group">
-                                <div class="col-md-3">
-                                    <select class="form-control" id="TinhTrangThanhToan" name="TinhTrangThanhToan">
-                                        <option selected="@Model.TinhTrangThanhToan">@Model.TinhTrangThanhToan</option>
-                                        <option>Chưa thanh toán</option>
-                                        <option>Đã thanh toán</option>
-                                        <option>Đang nợ</option>
-                                    </select>
-                                </div>
-                                @Html.ValidationMessageFor(model => model.TinhTrangThanhToan, "", new { @class = "text-danger" })
+                            <p><strong>Trạng thái đơn hàng:</strong>@Html.DisplayFor(model => model.TrangThai)</p>
 
-                            </div>
-                        </p>
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.NgayLap, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.NgayLap, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.NgayLap, "", new { @class = "text-danger" })
-                            </div>
                         </div>
 
-                        @*<div class="form-group col-md-3">
-                                @Html.LabelFor(model => model.NgayLap, htmlAttributes: new { @class = "control-label " })
-                                <input class="form-control text-box single-line" data-val="true" data-val-date="The field HanSH must be a date." id="NgayLap" name="NgayLap" type="datetime-local" value="">
-                                @Html.ValidationMessageFor(model => model.NgayLap, "", new { @class = "text-danger" })
-                            </div>*@
+                        <div class="col-sm-4">
+                            <p>
+                                <strong>Tổng đơn hàng:</strong> @{ var ThanhTien = string.Format("{0:0,0 vnđ}", Model.TongTien);}
+                                @Html.DisplayFor(modelItem => ThanhTien)
+                            </p>
 
+                        </div>
+                        <div class="col-sm-4">
+                        </div>
+                        <div class="col-sm-4">
+                            <p>
+                                <strong>Tình trạng thanh toán:</strong>
+                                <div class="form-group">
+                                    <div class="col-md-10">
+                                        <select class="form-control" id="TinhTrangThanhToan" name="TinhTrangThanhToan">
+                                            <option selected="@Model.TinhTrangThanhToan">@Model.TinhTrangThanhToan</option>
+                                            <option>Chưa thanh toán</option>
+                                            <option>Đã thanh toán</option>
+                                            <option>Đang nợ</option>
+                                        </select>
+                                    </div>
+                                    @Html.ValidationMessageFor(model => model.TinhTrangThanhToan, "", new { @class = "text-danger" })
 
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Chỉnh sửa" class="btn btn-info" />
+                                </div>
+                            </p>
+
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.NgayLap, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayXuat must be a date." id="NgaySX" name="NgaySX" type="datetime-local" value="">
+                                    @Html.ValidationMessageFor(model => model.NgayLap, "", new { @class = "text-danger" })
+                                </div>
                             </div>
+
+                        </div>
+                    </div>
+
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.MaDH)
+                    @Html.HiddenFor(model => model.MaDL)
+                    @Html.HiddenFor(model => model.MaNVLap)
+
+                    @Html.HiddenFor(model => model.TrangThai)
+                    @Html.HiddenFor(model => model.DiemGiao)
+                    @Html.HiddenFor(model => model.TongTien)
+
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Chỉnh sửa" class="btn btn-info" />
                         </div>
                     </div>
                 </div>
+
             }
 
-            <div>
-                @Html.ActionLink("Quay lại danh sách hóa đơn", "QLDonHang")
-            </div>
+
+        </div>
+        <div>
+            @Html.ActionLink("Quay lại danh sách hóa đơn", "QLDonHang")
         </div>
     </div>
 </div>
-<link href="~/Content/css/KeToan.css" rel="stylesheet" />
+
 
 
